Fix inpage title spacing

--- a/app/assets/styles/global/_inpage.scss
+++ b/app/assets/styles/global/_inpage.scss
@@ -37,13 +37,10 @@
 .inpage__title {
   @include heading(2.5rem);
   text-transform: uppercase;
-  margin-bottom: $global-spacing * 2;
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
+  margin-bottom: $global-spacing;
 
   .label {
-    margin: 0 ($global-spacing / 2);
+    margin: 0.625rem ($global-spacing / 2);
     padding: ($global-spacing / 4) $global-spacing;
   }
 }
@@ -70,6 +67,18 @@
     }
   }
 
+}
+
+.inpage__introduction {
+  font-family: $heading-font-family;
+  font-weight: $heading-font-regular;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  margin-bottom: $global-spacing;
+
+  > *:last-child {
+    margin-bottom: 0;
+  }
 }
 
 
@@ -209,7 +218,7 @@
 .inpage__actions {
   grid-column: auto / span 4;
   justify-self: end;
-  align-self: flex-end;
+  align-self: flex-start;
   padding: ($global-spacing / 2) 0;
 }
 
